# frgb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  b  c  d  r  rustfmt.toml  u
crates/frgb-cli/: Cargo.toml
crates/frgb-cli/src/: cli.rs  commands.rs  main.rs
crates/frgb-core/: Cargo.toml
crates/frgb-core/src/: aura_backend.rs  backend.rs  config.rs  discovery.rs  error.rs  hwmon.rs  lcd_backend.rs  lib.rs  openrgb_backend.rs  registry.rs  rf_backend.rs  sequencer.rs  session.rs  system.rs  transport.rs  usb_transport.rs  wired_ene_backend.rs
crates/frgb-core/src/hwmon_backend/: counters.rs  detect.rs  fs.rs  mod.rs  recovery.rs  state.rs  writer.rs
crates/frgb-core/src/services/: mod.rs  rgb.rs  speed.rs
crates/frgb-daemon/: Cargo.toml
crates/frgb-daemon/src/: alerts.rs  app_profiles.rs  config_cache.rs  curves.rs  engine.rs  handler.rs  ipc.rs  lcd_manager.rs  main.rs  openrgb_server.rs  power.rs  scheduler.rs  show_runner.rs  temp_rgb.rs
crates/frgb-gui/: Cargo.toml
crates/frgb-gui/src/: bridge.rs  convert.rs  debounce.rs  fan_render.rs  lcd_convert.rs  main.rs  rgb_convert.rs  sensor_history.rs  state.rs
crates/frgb-gui/src/pages/: curves.rs  lcd.rs  led.rs  mod.rs  overview.rs  rgb.rs  sensors.rs  sequence.rs  settings.rs  show_runner_ui.rs  speed.rs
crates/frgb-gui/ui/: globals.slint  group_detail.slint  main.slint  sidebar.slint  theme.slint  widgets.slint
crates/frgb-gui/ui/pages/: curves.slint  sensors.slint  sequence.slint  settings.slint  show_runner.slint
crates/frgb-gui/ui/tabs/: lcd.slint  led.slint  overview.slint  rgb.slint  speed.slint
crates/frgb-ipc/: Cargo.toml
crates/frgb-ipc/src/: client.rs  event_stream.rs  lib.rs  wire.rs
crates/frgb-lcd/: Cargo.toml
crates/frgb-lcd-render/: Cargo.toml
crates/frgb-lcd-render/src/: font.rs  lib.rs  sensor.rs  sysinfo.rs  template.rs  text.rs
crates/frgb-lcd/src/: capture.rs  decode.rs  encode.rs  encrypt.rs  h264.rs  jpeg.rs  lib.rs  video.rs
crates/frgb-model/: Cargo.toml
crates/frgb-model/data/: devices.toml
crates/frgb-model/src/: brightness.rs  config.rs  device.rs  effect.rs  group_id.rs  ipc.rs  lcd.rs  lib.rs  rgb.rs  sensor.rs  show.rs  spec.rs  spec_loader.rs  speed.rs  speed_percent.rs  temperature.rs  usb_ids.rs  validated_name.rs
crates/frgb-protocol/: Cargo.toml
crates/frgb-protocol/src/: color.rs  constants.rs  decode.rs  encode.rs  lib.rs  pump.rs
crates/frgb-rgb/: Cargo.toml
crates/frgb-rgb/src/: buffer.rs  color.rs  generator.rs  layout.rs  lib.rs  pipeline.rs
crates/frgb-rgb/src/compression/: bitstream.rs  decoder.rs  encoder.rs  encoder_v1.rs  matcher.rs  mod.rs
crates/frgb-rgb/src/effects/: blow_up.rs  boomerang.rs  bounce_effect.rs  breathing.rs  candy_box.rs  collide.rs  color_cycle.rs  colorful_meteor.rs  common.rs  cover_cycle.rs  disco.rs  door.rs  double_arc.rs  double_meteor.rs  drumming.rs  duel.rs  electric_current.rs  endless.rs  gradient_ribbon.rs  heartbeat.rs  heartbeat_runway.rs  hourglass.rs  intertwine.rs  kaleidoscope.rs  lottery.rs  meteor.rs  meteor_contest.rs  meteor_mix.rs  meteor_rainbow.rs  meteor_shower.rs  mixing.rs  mod.rs  mop_up.rs  paint.rs  ping_pong.rs  pioneer.rs  pump.rs  racing.rs  rainbow.rs  rainbow_morph.rs  (+19 more)
crates/frgb-usb/: Cargo.toml
crates/frgb-usb/src/: counters.rs  device.rs  discovery.rs  error.rs  hid.rs  lib.rs  recovery.rs
crates/frgb-usb/tests/: hardware.rs  hardware_reopen.rs
systemd/: frgb-daemon.service
udev/: 99-frgb.rules
