[workspace]
resolver = "2"
members = [
    "crates/frgb-model",
    "crates/frgb-protocol",
    "crates/frgb-usb",
    "crates/frgb-rgb",
    "crates/frgb-lcd",
    "crates/frgb-lcd-render",
    "crates/frgb-ipc",
    "crates/frgb-core",
    "crates/frgb-cli",
    "crates/frgb-daemon",
    "crates/frgb-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }
too_many_arguments = "allow"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
