[package]
name = "frgb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for frgb fan/RGB/LCD controller"

[lints]
workspace = true

[[bin]]
name = "frgb"
path = "src/main.rs"

[dependencies]
frgb-core = { path = "../frgb-core" }
frgb-ipc = { path = "../frgb-ipc" }
frgb-lcd = { path = "../frgb-lcd" }
frgb-model = { path = "../frgb-model" }
frgb-rgb = { path = "../frgb-rgb" }
frgb-usb = { path = "../frgb-usb" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
