[package]
name = "frgb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestration layer for frgb — ties USB, protocol, RGB, LCD into Controller API"

[lints]
workspace = true

[dependencies]
frgb-model = { path = "../frgb-model" }
frgb-protocol = { path = "../frgb-protocol" }
frgb-rgb = { path = "../frgb-rgb" }
frgb-lcd = { path = "../frgb-lcd" }
frgb-usb = { path = "../frgb-usb" }
frgb-ipc = { path = "../frgb-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
dirs = "5"
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
