[package]
name = "frgb-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-running system service for frgb — IPC, fan curves, sequences, config persistence"

[lints]
workspace = true

[[bin]]
name = "frgbd"
path = "src/main.rs"

[dependencies]
frgb-core = { path = "../frgb-core" }
frgb-ipc = { path = "../frgb-ipc" }
frgb-lcd = { path = "../frgb-lcd" }
frgb-lcd-render = { path = "../frgb-lcd-render" }
frgb-model = { path = "../frgb-model" }
frgb-rgb = { path = "../frgb-rgb" }
frgb-usb = { path = "../frgb-usb" }
image = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"

[dev-dependencies]
