[package]
name = "frgb-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
frgb-ipc = { path = "../frgb-ipc" }
frgb-model = { path = "../frgb-model" }
frgb-rgb = { path = "../frgb-rgb" }
image.workspace = true
tiny-skia = "0.11"
slint = "1.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rfd = "0.15"
# ksni disabled — zbus 5 panics on internal threads without Tokio runtime context.
# Re-enable when ksni provides stable non-async tray init.
# ksni = "0.3"
# tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
slint-build = "1.9"
