[package]
name = "frgb-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types for frgb — zero IO, zero side effects"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
serde_json = "1"
