[package]
name = "frgb-usb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "USB transport layer — libusb wrapper, pure IO"

[lints]
workspace = true

[dependencies]
rusb = "0.9"
libc = "0.2"
tracing = "0.1"
frgb-model = { path = "../frgb-model" }

[dev-dependencies]
env_logger = "0.11"
frgb-protocol = { path = "../frgb-protocol" }
